==> WeActStudio/WeActStudio.EpaperModule/Example/EpaperModuleTest_APM32F103/Epaper/epaper.c <==
#include "epaper.h"
#include "epdfont.h"
#include "systick.h"
#include "apm32f10x_gpio.h"
#include "apm32f10x_rcm.h"
#include "apm32f10x_spi.h"

void epd_res_set()
{
  GPIO_WriteBitValue(GPIOA, GPIO_PIN_8, BIT_SET);
}

void epd_res_reset()
{
  GPIO_WriteBitValue(GPIOA, GPIO_PIN_8, BIT_RESET);
}

void epd_dc_set()
{
  GPIO_WriteBitValue(GPIOB, GPIO_PIN_14, BIT_SET);
}

void epd_dc_reset()
{
  GPIO_WriteBitValue(GPIOB, GPIO_PIN_14, BIT_RESET);
}

void epd_cs_set()
{
  GPIO_WriteBitValue(GPIOB, GPIO_PIN_12, BIT_SET);
}

void epd_cs_reset()
{
  GPIO_WriteBitValue(GPIOB, GPIO_PIN_12, BIT_RESET);
}

uint8_t epd_is_busy()
{
  return GPIO_ReadInputBit(GPIOA, GPIO_PIN_15) == BIT_RESET ? 0 : 1;
}

void epd_io_init(void)
{
  GPIO_Config_T GPIO_ConfigStruct;
  SPI_Config_T spiConfig;

  RCM_EnableAPB2PeriphClock((RCM_APB2_PERIPH_T)(RCM_APB2_PERIPH_GPIOA | RCM_APB2_PERIPH_GPIOB));

  /* configure the epaper module res pin */
  GPIO_ConfigStruct.mode = GPIO_MODE_OUT_PP;
  GPIO_ConfigStruct.pin = GPIO_PIN_8;
  GPIO_ConfigStruct.speed = GPIO_SPEED_50MHz;
  GPIO_Config(GPIOA, &GPIO_ConfigStruct);

  /* configure the epaper module busy pin */
  GPIO_ConfigStruct.mode = GPIO_MODE_IN_PU;
  GPIO_ConfigStruct.pin = GPIO_PIN_15;
  GPIO_Config(GPIOA, &GPIO_ConfigStruct);

  /* configure the epaper module d/c pin */
  GPIO_ConfigStruct.mode = GPIO_MODE_OUT_PP;
  GPIO_ConfigStruct.pin = GPIO_PIN_14;
  GPIO_ConfigStruct.speed = GPIO_SPEED_50MHz;
  GPIO_Config(GPIOB, &GPIO_ConfigStruct);

  /* configure the epaper module spi2 sck mosi pin */
  GPIO_ConfigStruct.mode = GPIO_MODE_AF_PP;
  GPIO_ConfigStruct.pin = GPIO_PIN_13 | GPIO_PIN_15;
  GPIO_ConfigStruct.speed = GPIO_SPEED_50MHz;
  GPIO_Config(GPIOB, &GPIO_ConfigStruct);

  /* configure the epaper module cs pin */
  GPIO_ConfigStruct.mode = GPIO_MODE_OUT_PP;
  GPIO_ConfigStruct.pin = GPIO_PIN_12;
  GPIO_ConfigStruct.speed = GPIO_SPEED_50MHz;
  GPIO_Config(GPIOB, &GPIO_ConfigStruct);

  /* configure spi2 */
  RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_SPI2);

  SPI_ConfigStructInit(&spiConfig);
  spiConfig.length = SPI_DATA_LENGTH_8B;
  spiConfig.baudrateDiv = SPI_BAUDRATE_DIV_8;
  spiConfig.direction = SPI_DIRECTION_1LINE_TX;
  spiConfig.firstBit = SPI_FIRSTBIT_MSB;
  spiConfig.mode = SPI_MODE_MASTER;
  spiConfig.polarity = SPI_CLKPOL_HIGH;
  spiConfig.phase = SPI_CLKPHA_2EDGE;
  spiConfig.nss = SPI_NSS_SOFT;
  SPI_Config(SPI2, &spiConfig);
  SPI_ConfigDataSize(SPI2, SPI_DATA_LENGTH_8B);
  SPI_Enable(SPI2);
}

void epd_write_reg(uint8_t reg)
{
  epd_dc_reset();
  epd_cs_reset();

  SPI_I2S_TxData(SPI2, reg);
  while (SPI_I2S_ReadStatusFlag(SPI2, SPI_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
  epd_dc_set();
}

void epd_write_data(uint8_t data)
{
  epd_cs_reset();

  SPI_I2S_TxData(SPI2, data);
  while (SPI_I2S_ReadStatusFlag(SPI2, SPI_FLAG_BSY) != RESET)
    ;

  epd_cs_set();
}

void _epd_write_data(uint8_t data)
{

  while (SPI_I2S_ReadStatusFlag(SPI2, SPI_FLAG_TXBE) == RESET)
    ;
  SPI_I2S_TxData(SPI2, data);
}

void _epd_write_data_over()
{
  while (SPI_I2S_ReadStatusFlag(SPI2, SPI_FLAG_BSY) != RESET)
    ;
}

void epd_writedata(uint8_t *Image1, uint32_t length)
{
  epd_cs_reset();
  for (uint32_t j = 0; j < length; j++)
  {
    _epd_write_data(Image1[j]);
  }
  _epd_write_data_over();
  epd_cs_set();
}
